CHATS_SIT/force-app/main/default/objects/sfsit_t_indiv_rel_hist__x.object
<CustomObject>
    <description>sfsit$t_indiv_rel_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_indiv_rel_hist</externalName>
    <fields>
        <fullName>cde_source_vrfyd_rel__c</fullName>
        <description>cde_source_vrfyd_rel</description>
        <externalDeveloperName>cde_source_vrfyd_rel</externalDeveloperName>
        <label>How Verified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_rel_indiv__c</fullName>
        <description>cde_type_rel_indiv</description>
        <externalDeveloperName>cde_type_rel_indiv</externalDeveloperName>
        <label>Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_verif__c</fullName>
        <description>cde_type_verif</description>
        <externalDeveloperName>cde_type_verif</externalDeveloperName>
        <label>Verified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dte_begin_effv__c</fullName>
        <description>dte_begin_effv</description>
        <externalDeveloperName>dte_begin_effv</externalDeveloperName>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_end_effv__c</fullName>
        <description>dte_end_effv</description>
        <externalDeveloperName>dte_end_effv</externalDeveloperName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_verif__c</fullName>
        <description>dte_verif</description>
        <externalDeveloperName>dte_verif</externalDeveloperName>
        <label>Verification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_case_vrfyng__c</fullName>
        <description>idn_case_vrfyng</description>
        <externalDeveloperName>idn_case_vrfyng</externalDeveloperName>
        <label>Case Verification ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_client__c</fullName>
        <description>idn_client</description>
        <externalDeveloperName>idn_client</externalDeveloperName>
        <label>Client ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_client_cont_care__c</fullName>
        <description>idn_client_cont_care</description>
        <externalDeveloperName>idn_client_cont_care</externalDeveloperName>
        <label>Client County Care</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_client_reltd__c</fullName>
        <description>idn_client_reltd</description>
        <externalDeveloperName>idn_client_reltd</externalDeveloperName>
        <label>Related Client ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_indiv_rel__c</fullName>
        <description>idn_indiv_rel</description>
        <externalDeveloperName>idn_indiv_rel</externalDeveloperName>
        <label>Relationship ID</label>
        <length>50</length>
        <referenceTargetField>T_INDIV_REL__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_INDIV_REL__c</referenceTo>
        <relationshipLabel>Relationship Legacy History</relationshipLabel>
        <relationshipName>sfsit_t_indiv_rel_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_indiv_rel_hist__c</fullName>
        <description>idn_indiv_rel_hist</description>
        <externalDeveloperName>idn_indiv_rel_hist</externalDeveloperName>
        <label>Relationship ID history</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sfsit_t_indiv_rel_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>idn_user_vrfyng__c</fullName>
        <description>idn_user_vrfyng</description>
        <externalDeveloperName>idn_user_vrfyng</externalDeveloperName>
        <label>User Verification ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_curr__c</fullName>
        <description>ind_record_curr</description>
        <externalDeveloperName>ind_record_curr</externalDeveloperName>
        <label>Current Record Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical Deleted Record</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_seq_rel_indiv__c</fullName>
        <description>nbr_seq_rel_indiv</description>
        <externalDeveloperName>nbr_seq_rel_indiv</externalDeveloperName>
        <label>Relationalship Indiv Sequence number</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Relationship History</label>
    <pluralLabel>Relationship History</pluralLabel>
</CustomObject>